# ChatRoomServer

./: CMakeLists.txt  main.cpp  server.cpp  server.h  server.ui
icon/: icon.qrc
